--- a/crates/db/Cargo.toml
+++ b/crates/db/Cargo.toml
@@ -14,6 +14,7 @@ rustls = "0.23.4"
 rustls-pki-types = "1.4.1"
 serde = { version = "1.0.198", features = ["derive"] }
 tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
-tokio-postgres = "0.7.10"
+tokio-postgres = { version = "0.7.10", features = ["with-uuid-0_8"] }
 tokio-postgres-rustls = "0.12.0"
+uuid = { version = "0.8.2", features = ["serde", "v4"] }
 webpki-roots = "0.26.1"
