--- a/crates/server/Cargo.toml
+++ b/crates/server/Cargo.toml
@@ -17,6 +17,7 @@ tokio = { version = "1.37.0", default-features = false, features = ["macros", "f
 
 # Database
 uuid = { version = "0.8.2", features = ["serde", "v4"] }
+tokio-postgres = { version = "0.7.10", features = ["with-uuid-0_8"] }
 
 # Cryptographic
 hex = "0.4.3"
@@ -38,3 +39,6 @@ toml = "0.8.12"
 
 # CLI
 clap = { version = "4.5.4", features = ["derive"] }
+
+# Time Processing
+chrono = { version = "0.4.38", features = ["serde"] }
